force-app/main/default/objects/Payment_Attempt__c/Payment_Attempt__c.object-meta.xml
<CustomObject>
    <label>Payment Attempt</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Payment Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>