force-app/main/default/objects/Payment_Attempt__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Subscription Payment Attempts</relationshipLabel>
    <relationshipName>Payment_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>