force-app/main/default/objects/Payment_Attempt__c/fields/Ready_To_Payment__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Payment</label>
    <type>Checkbox</type>
</CustomField>