force-app/main/default/objects/Payment_Attempt__c/fields/Remaining_Retries__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Retries__c</fullName>
    <label>Remaining Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>