force-app/main/default/objects/Payment_Attempt__c/fields/Retries_Interval__c.field-meta.xml
<CustomField>
    <fullName>Retries_Interval__c</fullName>
    <label>Retries Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>