force-app/main/default/objects/Payment_Attempt__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Payment Attempts</relationshipLabel>
    <relationshipName>Payment_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>